--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -105,6 +105,8 @@ jobs:
           export RELEASE_PACKAGE_FILE="quasar-linux-v$QUASAR_VERSION.zip"
           7z a $RELEASE_PACKAGE_FILE ./build/*
           export RELEASE_PACKAGE_PATH=$(realpath $RELEASE_PACKAGE_FILE)
+          echo "The env variable is $GITHUB_ENV"
+          echo $RELEASE_PACKAGE_PATH >> $GITHUB_ENV
           
       - name: Package Sample Widgets
         if: runner.os == 'Linux'
@@ -112,6 +114,7 @@ jobs:
           export WIDGETS_PACKAGE_FILE="quasar-sample-widgets.zip"
           7z a $WIDGETS_PACKAGE_FILE ./widgets/
           export WIDGETS_PACKAGE_FILE=$(realpath $WIDGETS_PACKAGE_FILE)
+          echo $WIDGETS_PACKAGE_FILE >> $GITHUB_ENV
 
       - name: Upload Build Artifact
         if: runner.os == 'Linux'
